# Meowgine

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
source/: main.cpp
source/core/: Window.cpp  Window.h
